@@ -502,9 +502,11 @@ help Privmsg {
 	"  Send a message to a channel.";
 	"  Ex: /PRIVMSG #room Hi all";
 	" /PRIVMSG <prefix><#channel> <text>";
-	"  Send a message to users with <prefix> in <#channel> only";
-	"  Ex: /PRIVMSG @#room This goes to all ops";
-	"      /PRIVMSG +%@#room This goes to all +v, +h and +o's.";
+	"  Send a message to users with <prefix> and higher in <#channel> only";
+	"  Ex: /PRIVMSG @#room This goes to +oaq";
+	"      /PRIVMSG +#room This goes to +vhoaq";
+	"  NOTE: You need at least voice in order to send to +#chan/%#chan/@#chan";
+	"        and at least ops to send to &#chan/~#chan.";
 	" /PRIVMSG $<mask> <text>";
 	"  Send a message to all users on servers matching <mask> [Oper only]";
 	"  This is shown in the status window by most clients.";
@@ -527,9 +529,11 @@ help Notice {
 	"  Send a notice to a channel.";
 	"  Ex: /NOTICE #room Hi all, this is annoying";
 	" /NOTICE <prefix><#channel> <text>";
-	"  Send a notice to users with <prefix> in <#channel> only";
-	"  Ex: /NOTICE @#room This goes to all ops";
-	"      /NOTICE +%@#room This goes to all +v, +h and +o's.";
+	"  Send a notice to users with <prefix> and higher in <#channel> only";
+	"  Ex: /NOTICE @#room This goes to +oaq";
+	"      /NOTICE +#room This goes to +vhoaq";
+	"  NOTE: You need at least voice in order to send to +#chan/%#chan/@#chan";
+	"        and at least ops to send to &#chan/~#chan.";
 	" /NOTICE $<mask> <text>";
 	"  Send a notice to all users on servers matching <mask> [Oper only]";
 	"  This is shown in the status window by most clients.";
